--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <HTML>
-  <H1>This is a webpage</H1>
+  <H1>Datorikas darbi</H1>
   <p><a href="Jansone_citaLapa.html"> Cita Lapa </a>
+  <p><a href="Jansone_forma.html"> Forma </a>
