--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
   <H1>Datorikas darbi</H1>
   <p><a href="Jansone_citaLapa.html"> Cita Lapa </a>
   <p><a href="Jansone_forma.html"> Forma </a>
+  <p><a href="skola.html"> Forma </a>
